Closed
Bug 347884
Opened 19 years ago
Closed 19 years ago
Building XULRunner with --embedding-profile=minimal failed, tkhstory
Categories
(Toolkit Graveyard :: XULRunner, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 obsolete file)
When embedding-profile=minimal enabled building xpfe,toolkit history diabled...
but using of history component not disabled in other places....:
xpfe/browser/src/nsBrowserInstance.cpp:86
toolkit/library/libxul-config.mk
toolkit/library/nsStaticXULComponents.cpp
.............................................
c++ -o nsBrowserInstance.o -c -fvisibility=hidden -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_COM_OBSOLETE -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DZLIB_INTERNAL -DOSTYPE=\"Linux2.6\" -DOSARCH=\"Linux\" -DBUILD_ID=0000000000 -I../../../dist/include/xpcom -I../../../dist/include/string -I../../../dist/include/necko -I../../../dist/include/shistory -I../../../dist/include/widget -I../../../dist/include/gfx -I../../../dist/include/docshell -I../../../dist/include/appshell -I../../../dist/include/appcomps -I../../../dist/include/dom -I../../../dist/include/layout -I../../../dist/include/js -I../../../dist/include/uriloader -I../../../dist/include/pref -I../../../dist/include/webbrwsr -I../../../dist/include/windowwatcher -I../../../dist/include/history -I../../../dist/include/toolkitcomps -I../../../dist/include/history -I../../../dist/include -I../../../dist/include/browser -I../../../dist/include/nspr -I../../../dist/sdk/include -fPIC -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-long-long -pedantic -fshort-wchar -pthread -pipe -DDEBUG -D_DEBUG -DDEBUG_romaxa -DTRACING -g -fno-inline -O -DMOZILLA_CLIENT -include ../../../mozilla-config.h -Wp,-MD,.deps/nsBrowserInstance.pp xulrunner/mozilla_minimal/xpfe/browser/src/nsBrowserInstance.cpp
xulrunner/mozilla_minimal/xpfe/browser/src/nsBrowserInstance.cpp:86:31: error: nsIBrowserHistory.h: No such file or directory
make[2]: *** [nsBrowserInstance.o] Error 1
make[2]: Leaving directory `xulrunner/mozilla_minimal/obj-minimal-i686-pc-linux-gnu/xpfe/browser/src'
...................................................
....lla-config.h -Wp,-MD,.deps/nsUnicharUtils.pp nsUnicharUtils.cpp
make[4]: *** No rule to make target `../../dist/lib/components/libtkhstory.a', needed by `libxul.so'. Stop.
..........................................
I think if it disabled here:
http://landfill.mozilla.org/mxr-test/mozilla/source/toolkit/components/Makefile.in#96
It also should be disabled in other places....
| Assignee | ||
Updated•19 years ago
|
| Assignee | ||
Comment 1•19 years ago
|
||
Attachment #233090 -
Flags: first-review?
| Assignee | ||
Updated•19 years ago
|
Attachment #233090 -
Flags: first-review? → first-review?(timeless)
| Assignee | ||
Updated•19 years ago
|
Status: NEW → ASSIGNED
Attachment #233090 -
Flags: second-review?(benjamin)
Attachment #233090 -
Flags: first-review?(timeless)
Attachment #233090 -
Flags: first-review+
Updated•19 years ago
|
Attachment #233090 -
Flags: second-review?(benjamin) → second-review+
Comment on attachment 233090 [details] [diff] [review]
BUILD FIX
mozilla/toolkit/library/nsStaticXULComponents.cpp 1.34
mozilla/toolkit/library/libxul-config.mk 1.31
mozilla/xpfe/browser/src/nsBrowserInstance.cpp 1.285
Attachment #233090 -
Attachment is obsolete: true
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → romaxa
Status: ASSIGNED → NEW
| Assignee | ||
Comment 3•19 years ago
|
||
Patch applied and tested.
Closing.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Product: Toolkit → Toolkit Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•