Bug 347884 Building XULRunner with --embedding-profile=minimal failed, tkhstory only build mork+toolkit history ifdef MOZ_XUL patch by romaxa@gmail.com r=timeless r=bsmedberg